--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, minimum-scale=1">
     <meta name="theme-color" content="#000000">
+    <meta property="og:title" content="Кандидаты в президенты, отзвы реальных людей" />
+    <meta property="og:description" content="Мысли о кандидатах на пост президента 2019 от реальных людей из различных слоев населения" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -19,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Обгрунтуй позицію</title>
+    <title>Кандидаты в президенты, отзвы реальных людей</title>
   </head>
   <body>
     <noscript>
