--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, minimum-scale=1">
     <meta name="theme-color" content="#000000">
     <meta property="og:title" content="Кандидаты в президенты, отзвы" />
-    <meta property="og:description" content="Мысли от реальных людей из различных слоев населения" />
+    <meta property="og:description" content="Мысли реальных людей из различных слоев населения" />
     <meta property="og:image" content="%PUBLIC_URL%/image.jpg" />
     <meta property="og:url" content="%PUBLIC_URL%" />
-    <meta property="description" content="Мысли от реальных людей из различных слоев населения" />
+    <meta property="description" content="Мысли реальных людей из различных слоев населения" />
     <meta property="image" content="%PUBLIC_URL%/image.jpg" />
 
     <!--
@@ -44,5 +44,22 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">
+    <!-- Facebook Pixel Code -->
+    <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '371242143720478');
+      fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=371242143720478&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Facebook Pixel Code -->
   </body>
 </html>
